Issue #SB-12280 fix: Updated css for zoom icon alignment

--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/style.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/style.css
@@ -1271,8 +1271,8 @@ span.qc-option-txt {
     position: absolute;
     bottom: 0px;
     cursor: pointer;
-    top: 62%;
-    left: 75%;
+    top: 70.2%;
+    left: 79%;
 }
 
 .mcq-qLeft-question-container .audio-image {
